<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_category_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_area_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:text="@string/area"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_recipe_categories"
            />

        <TextView
            android:id="@+id/tv_ingredient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:text="@string/ingredients"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_recipe_area" />


        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/categories"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_area_title"
            tools:listitem="@layout/item_area"
            tools:orientation="horizontal"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_title"
            tools:listitem="@layout/item_area"
            tools:orientation="horizontal"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_title"
            tools:listitem="@layout/item_category"
            tools:orientation="horizontal"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>